<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.github.ipfs</groupId>
  <artifactId>java-ipfs-http-client</artifactId>
  <version>1.3.4</version>
  <packaging>jar</packaging>

  <name>java-ipfs-http-client</name>
  <url>https://github.com/ipfs/java-ipfs-http-client</url>

  <issueManagement>
    <url>https://github.com/ipfs/java-ipfs-http-client/issues</url>
    <system>GitHub Issues</system>
  </issueManagement>

  <scm>
    <url>https://github.com/ipfs/java-ipfs-http-client</url>
    <connection>scm:git:git://github.com/ipfs/java-ipfs-http-client.git</connection>
    <developerConnection>scm:git:git@github.com:ipfs/java-ipfs-http-client.git</developerConnection>
  </scm>

  <licenses>
    <license>
      <name>MIT License</name>
      <url>https://github.com/ipfs/java-ipfs-http-client/blob/master/LICENSE</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <version.junit>4.13.2</version.junit>
    <version.hamcrest>2.2</version.hamcrest>
    <version.multiaddr>v1.4.6</version.multiaddr>
  </properties>

  <repositories>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>2.13.3</version>
    </dependency>
    <dependency>
      <groupId>com.github.multiformats</groupId>
      <artifactId>java-multiaddr</artifactId>
      <version>${version.multiaddr}</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${version.junit}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.hamcrest</groupId>
      <artifactId>hamcrest</artifactId>
      <version>${version.hamcrest}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.10.0</version>
        <configuration>
          <release>17</release>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.19.1</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.3.0</version>
        <configuration>
          <archive>
            <manifest>
              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
            </manifest>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>com.amashchenko.maven.plugin</groupId>
        <artifactId>gitflow-maven-plugin</artifactId>
        <version>1.18.0</version>
        <configuration>
          <skipTestProject>true</skipTestProject>
          <fetchRemote>false</fetchRemote>
          <featureSquash>true</featureSquash>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <distributionManagement>
    <snapshotRepository>
      <id>jware-nexus-snapshots</id>
      <url>https://nexus.jurassicware.com:8443/repository/jware-snapshots</url>
    </snapshotRepository>
    <repository>
      <id>jware-nexus-releases</id>
      <url>https://nexus.jurassicware.com:8443/repository/jware-release</url>
    </repository>
  </distributionManagement>
</project>
